--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,41 @@
   color: #61dafb;
 }
 
+.navbar-dark {
+    background-color: #512DA8;
+}
+
+.jumbotron {
+    padding: 70px 30px 70px 30px;
+    margin: 0px auto;
+    background: #9575CD;
+    color: floralwhite;
+}
+
+.footer {
+    background-color: #D1C4E9;
+    margin: 115px 0px 0px 0px;
+    padding: 20px 0px 20px 0px;
+}
+
+.row-header {
+    margin: 0px auto;
+    padding: 0px auto;
+}
+
+.row-content {
+    margin: 0px auto;
+    padding: 50px 0px 50px 0px;
+    border-bottom: 1px ridge;
+    min-height: 400px;
+}
+
+address {
+    font-size: 80%;
+    margin: 0px;
+    color: #0f0f0f;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
